--- a/angular.json
+++ b/angular.json
@@ -135,6 +135,10 @@
               "devServerTarget": "gateways:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
